package es.kiwi.behavioral.strategy.example7;

/**
 * 实现具体的算法
 */
public class ConcreteStrategyB extends AbstractClass {

    @Override
    protected void stepOneOpe() {

    }

    @Override
    protected void stepTwoOpe() {

    }
}