package es.kiwi.behavioral.strategy.example7;

/**
 * 策略，定义算法的接口
 */
public interface Strategy {
    /**
     * 某个算法的接口，可以有传入参数，也可以有返回值
     */
    void algorithmInterface();
}
